Changes added an extra check to see if a user could afford the reward or not. Also sorteing the rewards in lowest points to higher